// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render comments label, when comments are loaded 1`] = `
<DocumentFragment>
  <div
    class="responsive__CommentContainer-sc-2j1dkf-0 boWpIp"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/ReadOnlySpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled comments 1`] = `
<DocumentFragment>
  <div
    class="responsive__CommentContainer-sc-2j1dkf-0 boWpIp"
  >
    <p
      class="responsive__CommentDisabledHeadline-sc-2j1dkf-3 bwIUkS"
    >
      Comments for this article have been turned off
    </p>
    <p
      class="responsive__CommentDisabledGuidelines-sc-2j1dkf-2 gGyJZd"
    >
      Comments are subject to our community guidelines, which can be viewed 
      <a
        class="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-textDecorationLine-1ddef8g"
        data-focusable="true"
        dir="auto"
        href="https://www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
        role="link"
      >
        here
      </a>
      .
    </p>
  </div>
</DocumentFragment>
`;

exports[`enabled comments 1`] = `
<DocumentFragment>
  <div
    class="responsive__CommentContainer-sc-2j1dkf-0 boWpIp"
    id="comments-container"
  >
    <div
      class="info styles__Container-sc-11ymj1r-0 ctyazP"
    >
      <div
        class="styles__IconContainer-sc-11ymj1r-1 coQoJx"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="styles__ContentContainer-sc-11ymj1r-2 eNoUJf"
      >
        <div
          class="styles__Title-sc-11ymj1r-3 fwVTpf"
        >
          Real-name commenting
        </div>
        <div
          class="styles__Description-sc-11ymj1r-4 cNleqJ"
        >
          Digital commenters are now identified by their real name. We believe this is the best way to ensure high-quality reader participation and intelligent debate.
        </div>
      </div>
    </div>
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pre-switchover comments 1`] = `
<DocumentFragment>
  <div
    class="responsive__CommentContainer-sc-2j1dkf-0 boWpIp"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/ReadOnlySpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`single comment 1`] = `
<DocumentFragment>
  <div
    class="responsive__CommentContainer-sc-2j1dkf-0 boWpIp"
    id="comments-container"
  >
    <div
      class="info styles__Container-sc-11ymj1r-0 ctyazP"
    >
      <div
        class="styles__IconContainer-sc-11ymj1r-1 coQoJx"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="styles__ContentContainer-sc-11ymj1r-2 eNoUJf"
      >
        <div
          class="styles__Title-sc-11ymj1r-3 fwVTpf"
        >
          Real-name commenting
        </div>
        <div
          class="styles__Description-sc-11ymj1r-4 cNleqJ"
        >
          Digital commenters are now identified by their real name. We believe this is the best way to ensure high-quality reader participation and intelligent debate.
        </div>
      </div>
    </div>
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`zero comments 1`] = `
<DocumentFragment>
  <div
    class="responsive__CommentContainer-sc-2j1dkf-0 boWpIp"
    id="comments-container"
  >
    <div
      class="info styles__Container-sc-11ymj1r-0 ctyazP"
    >
      <div
        class="styles__IconContainer-sc-11ymj1r-1 coQoJx"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="styles__ContentContainer-sc-11ymj1r-2 eNoUJf"
      >
        <div
          class="styles__Title-sc-11ymj1r-3 fwVTpf"
        >
          Real-name commenting
        </div>
        <div
          class="styles__Description-sc-11ymj1r-4 cNleqJ"
        >
          Digital commenters are now identified by their real name. We believe this is the best way to ensure high-quality reader participation and intelligent debate.
        </div>
      </div>
    </div>
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;
